--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,31 +19,21 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# Default to bash
-defaults:
-  run:
-    shell: bash
-
 jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install V
         run: |
           git clone https://github.com/vlang/v
           cd v
           make
           sudo ./v symlink
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v2
       - name: Build docs with V
-        run: /usr/local/bin/v doc -readme -o docs -f html .
+        run: v doc -readme -o docs -f html .
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
