--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,7 +33,9 @@ jobs:
           make
           sudo ./v symlink
       - name: Build docs with V
-        run: v doc -readme -o docs -f html .
+        run: |
+          v doc -readme -o docs -f html .
+          mv docs/xdg.html docs/index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
